@@ -3,10 +3,8 @@ import { environment } from '@environments/environment';
 declare var jQuery: any;
 
 export class QRCodeBuilder {
-
-    static URL = environment.URL;
-    public static createQRcode(target, username, option = {}) {
-        let code = QRCodeBuilder.URL + 'shop/' + username;
+    public static createQRcode(target, url, option = {}) {
+        let code = url;
         return new Promise((resolve) => {
             (<any>jQuery(target)).qrcode({
                 width: option['width'] || 196, height: option['height'] || 196, foreground: "#000",
@@ -18,7 +16,7 @@ export class QRCodeBuilder {
         });
     }
     public static createPromotionQrCode(target, url, option = {}) {
-        let code = QRCodeBuilder.URL + url;
+        let code = url;
         (<any>jQuery(target)).qrcode({
             width: option['width'] || 196, height: option['height'] || 196, foreground: "#000",
             correctLevel: 0,
