@@ -4,7 +4,7 @@
     <div class="col-sm-4 px-0 mb-3">
         <label class="font-weight-bold">URL:</label>
         <div class="input-group">
-            <input id="urlInput" class="form-control" style="background-color: #fff" readonly="readonly" [value]="environment.URL + 'shop/' + shop?.username"/>
+            <input id="urlInput" class="form-control" style="background-color: #fff" readonly="readonly" [value]="url"/>
             <div class="input-group-append">
                 <button class="btn input-group-text" (click)="copyURL()"><span class="fas fa-copy"></span></button>
                 <!-- <button class="btn input-group-text"><span class="fas fa-share-alt"></span></button> -->
